2012-10-06  Julian Scheid  <julians37@gmail.com>  (tiny change)

	* color.el (color-hsl-to-rgb): Fix incorrect results for
	small and large hue values.  (Bug#12559)

2012-10-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	New UIDL implementation.

	* mail-source.el (mail-sources, mail-source-keyword-map):
	Add :leave as a pop3 keyword.
	(mail-source-fetch-pop): Bind pop3-leave-mail-on-server.

	* pop3.el (pop3-leave-mail-on-server): Allow number.
	(pop3-uidl-file, pop3-uidl-file-backup): New user options.
	(pop3-movemail): Add UIDL support.
	(pop3-send-streaming-command): Take a list of mail numbers instead of
	the number of mails.
	(pop3-write-to-file): Add X-UIDL header.
	(pop3-uidl-stat, pop3-uidl-dele, pop3-uidl-load, pop3-uidl-save)
	(pop3-uidl-add-xheader): New functions.

	* message.el (message-ignored-resent-headers):
	Add X-Content-Length and X-UIDL headers.

2012-10-05  Glenn Morris  <rgm@gnu.org>

	* color.el (color-name-to-rgb, color-rgb-to-hex)
	(color-hue-to-rgb, color-hsl-to-rgb, color-rgb-to-hsv)
	(color-rgb-to-hsl, color-srgb-to-xyz, color-saturate-hsl)
	(color-desaturate-hsl, color-desaturate-name, color-lighten-hsl)
	(color-lighten-name, color-darken-hsl, color-darken-name): Doc fixes.

2012-09-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-browse-delete-temp-files): Never ask again
	a user about whether to delete temp files if once a user answered as n.

2012-09-25  Chong Yidong  <cyd@gnu.org>

	* password-cache.el (password-read-and-add): Use a declare form to mark
	this function obsolete.

2012-09-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: Bind mail-encode-mml for old Emacsen.

2012-09-17  Richard Stallman  <rms@gnu.org>

	* message.el (message-in-body-p): Don't set mark or modify buffer.

	* mml.el (mml-attach-file): Doc fix.
	(mml-attach-external, mml-attach-buffer, mml-attach-file):
	Set mail-encode-mml when in Mail mode.
	Simplify code to set HEAD and move back to HEAD.
	(mml-insert-multipart, mml-insert-part):